--- a/advertise.html
+++ b/advertise.html
@@ -52,10 +52,10 @@
         <a href="https://t.me/yunvgongshenzhenxiuche1" target="_blank" rel="noopener noreferrer">
       御女宫深圳修车频道←点击关注
     </a>
-<!--     <a href="https://t.me/yunvgongshaonvge" target="_blank" rel="noopener noreferrer">
+    <a href="https://t.me/haodongxiya123" target="_blank" rel="noopener noreferrer">
       御女宫少女阁←点击关注
     </a>
-    <a href="https://t.me/yunvgongshawu" target="_blank" rel="noopener noreferrer">
+<!--     <a href="https://t.me/yunvgongshawu" target="_blank" rel="noopener noreferrer">
       御女宫砂舞频道←点击关注
     </a>
   	<a href="https://t.me/yunvgongribenchihan2" target="_blank" rel="noopener noreferrer">
