--- a/advertise.html
+++ b/advertise.html
@@ -55,6 +55,9 @@
     <a href="https://t.me/haodongxiya123" target="_blank" rel="noopener noreferrer">
       御女宫少女阁←点击关注
     </a>
+	<a href="https://t.me/yunvgongroufan" target="_blank" rel="noopener noreferrer">
+      御女宫肉番动漫频道←点击关注
+    </a>
 <!--     <a href="https://t.me/yunvgongshawu" target="_blank" rel="noopener noreferrer">
       御女宫砂舞频道←点击关注
     </a>
