--- a/御女宫网页自跳转/御女宫肉番动漫频道.html
+++ b/御女宫网页自跳转/御女宫肉番动漫频道.html
@@ -52,7 +52,7 @@
 </head>
 <body>
   <a id="jump-btn" target="_blank" rel="noopener noreferrer" style="display:none;">
-    💪 点击关注 御女宫深圳修车频道 
+    💪 点击关注 御女宫肉番动漫频道 
   </a>
 </body>
 </html>
