--- a/福利姬频道总目录/Azami全集/menu.html
+++ b/福利姬频道总目录/Azami全集/menu.html
@@ -28,14 +28,13 @@
   </script>
   <p><a href="https://telegra.ph/Azami-Hoshino-Ai-34P-08-23">Azami Hoshino Ai 34P</a></p>
   <p><a href="https://telegra.ph/Azami---斩赤红之瞳---艾斯德斯54P2V-534MB-08-25">Azami - 斩·赤红之瞳 - 艾斯德斯[54P2V-534MB]</a></p>
-  <p><a href="https://telegra.ph/Azami-Esdeath-53P-348MB-08-25">Azami Esdeath [53P-348MB]</a></p>
   <p><a href="https://telegra.ph/Azami---Yelan-08-25">Azami - Yelan</a></p>
   <p><a href="https://telegra.ph/Azami---Yor-26P-232MB-08-25">Azami - Yor [26P-232MB]</a></p>
   <p><a href="https://telegra.ph/Azami---Veronica-22P-99MB-08-25">Azami - Veronica [22P-99MB]</a></p>
   <p><a href="https://telegra.ph/Azami---Shining-Arknights-08-25-2">Azami - Shining (Arknights)</a></p>
   <p><a href="https://telegra.ph/Azami-Pack-Albedo-08-25">Azami Pack Albedo</a></p>
   <p><a href="https://telegra.ph/Azami---2B-Gantz-08-25">Azami - 2B Gantz</a></p>
-  <p><a href="https://telegra.ph/Azami---Ganyu-08-25">Azami - Ganyu</a></p>
+  <p><a href="https://telegra.ph/Azami---Ganyu-08-25">Azami - 甘雨 （原神）</a></p>
   <p><a href="https://telegra.ph/Azami---Ulrich-von-Hutten-20P-48MB-08-26">Azami - Ulrich von Hutten [20P-48MB]</a></p>
   <p><a href="https://telegra.ph/Azami---Bremerton-Qipao-Azur-Lane-15P-123mb-08-26">Azami - Bremerton Qipao (Azur Lane) [15P-123mb]</a></p>
   <p><a href="https://telegra.ph/Azami---Super-Sonico-08-26">Azami - Super Sonico</a></p>
