--- a/福利姬频道总目录/Bomi (보미)全集/menu.html
+++ b/福利姬频道总目录/Bomi (보미)全集/menu.html
@@ -71,6 +71,7 @@
   <p><a href="https://telegra.ph/Bbuttermilk-Vol24-Bomi-08-25">Bbuttermilk Vol.24 Bomi</a></p>
   <p><a href="https://telegra.ph/Bimilstory-Bomi---Vol26-Fantasy-Hardcore-bondage-01-08-29">Bomi - Vol.26 Fantasy Hardcore bondage 01</a></p>
   <p><a href="https://telegra.ph/Bimilstory-Bomi---Vol26-Fantasy-Hardcore-bondage-02-08-29">Bomi - Vol.26 Fantasy Hardcore bondage 02</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Bomi---Vol28-Sales-Queen-Secret-08-29">Bomi - Vol.28 Sales Queen Secret</a></p>
   <p><a href="https://telegra.ph/Bimilstory-Bomi---Vol29-Hair-salon-special-service-PART-1-08-29">Bomi - Vol.29 Hair salon special service PART 1</a></p>
   <p><a href="https://telegra.ph/Bimilstory-Bomi---Vol29-Hair-salon-special-service-PART-2-08-29">Bomi - Vol.29 Hair salon special service PART 2</a></p>
   <p><a href="https://telegra.ph/Bimilstory-Bomi---Vol30-Retro-mood-08-29">Bomi - Vol.30 Retro mood</a></p>
@@ -93,5 +94,6 @@
   <p><a href="https://telegra.ph/Pure-Media-Vol182---Bomi-보미-96P-662MB-08-25">Pure Media Vol.182 - Bomi (보미) [96P-662MB]</a></p>
   <p><a href="https://telegra.ph/Bimilstory-Bomi---Mesh-and-leather-Body-08-29">Bomi - Mesh and leather, Body</a></p>
   <p><a href="https://telegra.ph/Bimilstory-Bomi-보미-Under-Boob-2-08-29">Bomi (보미) Under Boob 2</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Bomi---Nier-Automata-2B-Black-ver-08-29">Bomi - Nier Automata 2B Black ver</a></p>
 </body>
 </html>
