--- a/福利姬频道总目录/Dame (담)全集/menu.html
+++ b/福利姬频道总目录/Dame (담)全集/menu.html
@@ -26,11 +26,21 @@
     document.getElementById("page-title").innerText = folderName + " 资源目录";
     document.title = folderName; // 同时修改网页标签标题
   </script>
-  <p><a href="https://telegra.ph/MoonNightSnap-Dame---It-thickens-Vol2-08-25-2">[MoonNightSnap] Dame - It thickens Vol.2</a></p>
+  <p><a href="https://telegra.ph/MoonNightSnap-Dame---It-thickens-Vol2-08-25-2">Dame - It thickens Vol.2</a></p>
   <p><a href="https://telegra.ph/Dame-담---Summer---Moon-Night-Snap-08-26">Dame (담) - Summer - Moon Night Snap</a></p>
   <p><a href="https://telegra.ph/Mona-모나-vs-Dame-담---Relationship---Moon-Night-Snap---Uncensored-08-26">Mona (모나) vs Dame (담) - Relationship - Moon Night Snap - Uncensored</a></p>
-  <p><a href="https://telegra.ph/Moon-Night-Snap-Dame-담--Happy-Day-Vol2-08-26">[Moon Night Snap] Dame (담) – Happy Day Vol.2</a></p>
-  <p><a href="https://telegra.ph/Moon-Night-Snap-Dame-담--Happy-Day-Vol1-08-26">[Moon Night Snap] Dame (담) – Happy Day Vol.1</a></p>
-
+  <p><a href="https://telegra.ph/Moon-Night-Snap-Dame-담--Happy-Day-Vol2-08-26">Dame (담) – Happy Day Vol.2</a></p>
+  <p><a href="https://telegra.ph/Moon-Night-Snap-Dame-담--Happy-Day-Vol1-08-26">Dame (담) – Happy Day Vol.1</a></p>
+  <p><a href="https://telegra.ph/Dame-담---Happy-Day-Vol1---Moon-Night-Snap-08-29">Dame (담) Happy Day Vol.1 - Moon Night Snap</a></p>
+  <p><a href="https://telegra.ph/Dame-담--Happy-Day-Vol2--Moon-Night-Snap-08-29">Dame (담) Happy Day Vol.2 – Moon Night Snap</a></p>
+  <p><a href="https://telegra.ph/Mona-vs-Dame---The-Queen-Vol2---Moon-Night-Snap-08-29">Mona vs Dame (담) The Queen Vol.2 - Moon Night Snap</a></p>
+  <p><a href="https://telegra.ph/Mona-모나-vs-Dame-담---Relationship---Moon-Night-Snap-08-29">Mona (모나) vs Dame (담) Relationship - Moon Night Snap</a></p>
+  <p><a href="https://telegra.ph/Moon-Night-Snap-Dame-담--Pride-girl--video-08-29">Moon Night Snap Dame (담) Pride girl + video</a></p>
+  <p><a href="https://telegra.ph/Moon-Night-Snap-Dame-담---Sdamsdam-08-29">Dame (담) Sdamsdam</a></p>
+  <p><a href="https://telegra.ph/Moon-Night-Snap-Dame---Breakfast-Vol2-08-29">Dame (담) Breakfast Vol.2</a></p>
+  <p><a href="https://telegra.ph/Moon-Night-Snap-Dame-담---Mature-Vol2-08-29">Dame (담) Mature Vol.2</a></p>
+  <p><a href="https://telegra.ph/Moon-Night-Snap-Dame---come-back-08-29">Dame (담) come back</a></p>
+  <p><a href="https://telegra.ph/Moon-Night-Snap-Dame---새해담이많이받으세요-08-29-2">Dame (담) 새해담이많이받으세요</a></p>
+  <p><a href="https://telegra.ph/MoonNightSnap-Dame---It-thickens-Vol2-08-29">Dame (담) It thickens Vol.2</a></p>
 </body>
 </html>
