--- a/福利姬频道总目录/Leesul全集/menu.html
+++ b/福利姬频道总目录/Leesul全集/menu.html
@@ -26,7 +26,9 @@
     document.getElementById("page-title").innerText = folderName + " 资源目录";
     document.title = folderName; // 同时修改网页标签标题
   </script>
-
-
+  <p><a href="https://telegra.ph/Bimilstory-Leesul-Vol02---Temptation-of-a-girl-wearing-a-suspender-08-29">Leesul Vol.02 - Temptation of a girl wearing a suspender</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Leesul---Vol08-See-Through-Bikini-08-29">Leesul Vol.08 See-Through Bikini</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Leesul---Vol09-See-Through-White-All-in-One-08-29">Leesul Vol.09 See-Through White All in One</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Leesul---Vol10-Camel-Toe-is-The-Truth-08-29">Leesul Vol10 Camel Toe is The Truth</a></p>
 </body>
 </html>
