--- a/福利姬频道总目录/Mina (민아) 全集/menu.html
+++ b/福利姬频道总目录/Mina (민아) 全集/menu.html
@@ -26,7 +26,10 @@
     document.getElementById("page-title").innerText = folderName + " 资源目录";
     document.title = folderName; // 同时修改网页标签标题
   </script>
-
-
+  <p><a href="https://telegra.ph/Bimilstory-Mina---Vol04-With-Bunnygirl-08-29">Mina (민아) Vol.04 With Bunnygirl</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Mina-vol05---In-the-Bath-08-29">Mina (민아) vol.05 - In the Bath</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Mina-민아-Vol11---Manga-Girl-Minas-Outing-to-The-Real-World-08-29">Mina (민아)  Vol.11 - Manga Girl Mina's Outing to The Real World</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Mina---Vol26-My-Healer-Mina-08-29">Mina (민아) Vol.26 My Healer Mina</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Mina---NieR-Automata-Wedding-Black-08-29">Mina (민아) NieR Automata Wedding Black</a></p>
 </body>
 </html>
