--- a/福利姬频道总目录/Risa全集/menu.html
+++ b/福利姬频道总目录/Risa全集/menu.html
@@ -26,7 +26,11 @@
     document.getElementById("page-title").innerText = folderName + " 资源目录";
     document.title = folderName; // 同时修改网页标签标题
   </script>
-
-
+  <p><a href="https://telegra.ph/Bimilstory-Risa---Vol02-Sexy-Appeal-08-29">Risa - Vol.02 Sexy Appeal</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Risa---Vol03-Queen-of-Slender-Risa-08-29">Risa - Vol.03 Queen of Slender, Risa</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Risa---Vol06-Rainbow-Star-08-29">Risa - Vol.06 Rainbow Star</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Risa---Vol08-Retro-Mood-08-29">Risa - Vol.08 Retro Mood</a></p>
+  <p><a href="https://telegra.ph/Bimilstory--Risa-Vol09---Black-stocking-is-right-08-29">Risa Vol.09 - Black stocking is right</a></p>
+  <p><a href="https://telegra.ph/Bimilstory--Risa-Vol10-White-see-through-08-29">Risa Vol.10 White see-through</a></p>
 </body>
 </html>
