--- a/福利姬频道总目录/Seoyool全集/menu.html
+++ b/福利姬频道总目录/Seoyool全集/menu.html
@@ -26,7 +26,9 @@
     document.getElementById("page-title").innerText = folderName + " 资源目录";
     document.title = folderName; // 同时修改网页标签标题
   </script>
-
-
+  <p><a href="https://telegra.ph/Bimilstory--Seoyool-Vol01-Debut-at-the-cafe-08-29">– Seoyool Vol.01 Debut at the cafe</a></p>
+  <p><a href="https://telegra.ph/Bimilstory--Seoyool-Vol02---At-dawn-08-29">– Seoyool Vol.02 - At dawn</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Seoyool-Vol03---Bondage-Villain-08-29">Seoyool Vol.03 - Bondage Villain</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Seoyool-Vol4-08-29">Seoyool Vol.4</a></p>
 </body>
 </html>
