--- a/福利姬频道总目录/Stella全集/menu.html
+++ b/福利姬频道总目录/Stella全集/menu.html
@@ -26,7 +26,11 @@
     document.getElementById("page-title").innerText = folderName + " 资源目录";
     document.title = folderName; // 同时修改网页标签标题
   </script>
-
-
+  <p><a href="https://telegra.ph/Bimilstory-Stella---Vol01-Debut-Stocking---Holic-08-29">Stella Vol.01 Debut Stocking - Holic</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Stella---Vol02-Skin-colored-Stella-08-29">Stella Vol.02 Skin-colored Stella</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Stella---Vol03-The-Colored-body-08-29">Stella Vol.03 The Colored body</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Stella---Vol04-Amazing-cool-body-08-29">Stella Vol.04 Amazing cool body</a></p>
+  <p><a href="https://telegra.ph/Bimilstory-Stella-Vol05-Secret-hotel-room-08-29-2">Stella Vol.05 Secret hotel room</a></p>
+  <p><a href="https://telegra.ph/Bimilstory--Stella-Vol06---private-hotel-08-29">Stella Vol.06 private hotel</a></p>
 </body>
 </html>
