--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
   <p><a href="./少女阁/index.html">少女阁</a></p> 
   <p><a href="./御女宫网页自跳转/index.html">御女宫网页自跳转</a></p> 
   <p><a href="./日本频道总目录/index.html">日本频道总目录</a></p> 
+  <p><a href="./水果派AV频道总目录/index.html">水果派AV频道总目录</a></p> 
   <p><a href="./漫画频道总目录/index.html">漫画频道总目录</a></p> 
   <p><a href="./福利姬频道总目录/index.html">福利姬频道总目录</a></p> 
+  <p><a href="./视频txt/index.html">视频txt</a></p> 
   <p><a href="./韩国少女频道/index.html">韩国少女频道</a></p> 
 </body>
 </html>
