--- a/视频txt/index.html
+++ b/视频txt/index.html
@@ -7,54 +7,25 @@
   <style>
     body { font-family: Arial, sans-serif; background: #2c2c2c; color: #fff; margin: 0; padding: 0; }
     .container { max-width: 1200px; margin: 20px auto; padding: 0 10px; }
-    .player { margin-bottom: 10px; position: relative; }
-    video { width: 100%; height: auto; background: black; touch-action: pan-y; }
+    .player { margin-bottom: 20px; }
+    video { width: 100%; height: auto; background: black; touch-action: pan-y; } /* 禁止左右滑动切换 */
 
-    /* 视频下方左右按钮 */
-    .nav-buttons {
-      display: flex;
-      justify-content: space-between;
-      margin: 10px 0 20px;
+    /* 控制按钮放大 (仅部分浏览器生效) */
+    video::-webkit-media-controls-volume-slider,
+    video::-webkit-media-controls-mute-button,
+    video::-webkit-media-controls-fullscreen-button {
+      transform: scale(1.5);
+      margin: 0 6px;
     }
-    .nav-buttons button {
-      background: #1e90ff;
-      color: #fff;
-      border: none;
-      padding: 10px 18px;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: 0.2s;
-      font-size: 16px;
-      min-width: 100px;
-    }
-    .nav-buttons button:hover { background: #0d6efd; }
 
-    /* 播放列表 */
-    .playlist {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      padding: 5px 0;
-    }
-    .playlist button {
-      flex: 0 0 9%;
-      background: #444;
-      color: #fff;
-      border: none;
-      padding: 10px 0;
-      cursor: pointer;
-      border-radius: 4px;
-      transition: 0.2s;
-      text-align: center;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+    .nav-buttons { display: flex; justify-content: center; gap: 15px; margin: 10px 0; }
+    .nav-buttons button { background: #444; color: #fff; border: none; padding: 10px 20px; cursor: pointer; border-radius: 4px; transition: 0.2s; }
+    .nav-buttons button:hover { background: #555; }
+
+    .playlist { display: flex; flex-wrap: wrap; gap: 10px; padding: 10px 0; justify-content: center; }
+    .playlist button { background: #444; color: #fff; border: none; padding: 10px 15px; cursor: pointer; border-radius: 4px; transition: 0.2s; }
     .playlist button:hover { background: #555; }
     .playlist button.active { background: #1e90ff; }
-
-    @media (max-width: 1024px) { .playlist button { flex: 0 0 15%; } }
-    @media (max-width: 600px) { .playlist button { flex: 0 0 30%; } }
 
     .details { background: #1c1c1c; padding: 15px; border-radius: 8px; }
     .details h1 { margin: 0 0 10px 0; font-size: 24px; }
@@ -66,132 +37,107 @@
 
 <div class="container">
   <div class="player">
-    <video id="video" controls></video>
+    <video id="video" controls playsinline></video>
   </div>
 
-  <!-- 上一集 / 下一集 按钮：视频下方，左右对称 -->
   <div class="nav-buttons">
-    <button id="prevBtn">⬅ 上一集</button>
-    <button id="nextBtn">下一集 ➡</button>
+    <button id="prev">上一集</button>
+    <button id="next">下一集</button>
   </div>
 
-  <div class="playlist" id="playlist"></div>
+  <div class="playlist" id="playlist">
+    <!-- 集数按钮通过 JS 生成 -->
+  </div>
 
   <div class="details">
     <h1 id="title">黑白局 - 電視劇</h1>
-    <p><strong>状态:</strong> <span id="status"></span></p>
+    <p><strong>状态:</strong> <span id="status">第20集完結</span></p>
     <p><strong>类别:</strong> <span id="category">大陸電視劇</span></p>
     <p><strong>导演:</strong> <span id="director">趙浚凱, 侯傑</span></p>
     <p><strong>主演:</strong> <span id="actors">楊旭文, 王硯輝</span></p>
     <p><strong>国家/语言/年代:</strong> <span id="meta">大陸 / 漢語普通話 / 2025</span></p>
     <p><strong>剧情介绍:</strong></p>
-    <p id="description"></p>
+    <p id="description">
+      展鵬（楊旭文 飾）的父親是一名鐵路警察，多年前因公殉職被追評為烈士。展鵬一直希望能夠回到父親曾經工作過的地方任職。然而，當他真正來到下桐並開始工作時，卻發現這裡的情況比他想像的要複雜得多。初見塗洪江（王硯輝 飾），他並不相信這個老警察。塗洪江在處理一起販毒案件時表現得非常可疑，這讓展鵬對他產生了戒備。然而，隨著時間的推移，塗洪江用自己的行動證明了自己的清白。後在攜手辦案的過程中，展鵬逐漸對塗洪江產生敬意，兩人最終聯手將幕後主使緝拿歸案。
+    </p>
   </div>
 </div>
 
 <script>
 const episodes = {
-  "第1集": { url: "https://cdn.wlcdn88.com:777/d1154710/index.m3u8", status: "更新至第1集", description: "展鵬（楊旭文 飾）的父親是一名鐵路警察..." },
-  "第2集": { url: "https://cdn.wlcdn88.com:777/24a79096/index.m3u8", status: "更新至第2集", description: "展鵬开始在下桐工作..." },
-  "第3集": { url: "https://cdn.wlcdn88.com:777/876c7a10/index.m3u8", status: "更新至第3集", description: "剧情继续..." },
-  "第20集": { url: "https://cdn.wlcdn88.com:777/b4d5c158/index.m3u8", status: "第20集完結", description: "展鵬与塗洪江联手将幕后主使抓捕归案..." }
+  "第1集": "https://cdn.wlcdn88.com:777/d1154710/index.m3u8",
+  "第2集": "https://cdn.wlcdn88.com:777/24a79096/index.m3u8",
+  "第3集": "https://cdn.wlcdn88.com:777/876c7a10/index.m3u8",
+  "第4集": "https://cdn.wlcdn88.com:777/08e571a4/index.m3u8",
+  "第5集": "https://cdn.wlcdn88.com:777/c157d41b/index.m3u8",
+  "第6集": "https://cdn.wlcdn88.com:777/8165d81c/index.m3u8",
+  "第7集": "https://cdn.wlcdn88.com:777/be10cef2/index.m3u8",
+  "第8集": "https://cdn.wlcdn88.com:777/f38e43bd/index.m3u8",
+  "第9集": "https://cdn.wlcdn88.com:777/81f6e26a/index.m3u8",
+  "第10集": "https://cdn.wlcdn88.com:777/0d3f5aa4/index.m3u8",
+  "第11集": "https://cdn.wlcdn88.com:777/d2d262ce/index.m3u8",
+  "第12集": "https://cdn.wlcdn88.com:777/8620bb8d/index.m3u8",
+  "第13集": "https://cdn.wlcdn88.com:777/c9221c9a/index.m3u8",
+  "第14集": "https://cdn.wlcdn88.com:777/81476e87/index.m3u8",
+  "第15集": "https://cdn.wlcdn88.com:777/5424d5c4/index.m3u8",
+  "第16集": "https://cdn.wlcdn88.com:777/34f4fe36/index.m3u8",
+  "第17集": "https://cdn.wlcdn88.com:777/a512f599/index.m3u8",
+  "第18集": "https://cdn.wlcdn88.com:777/d48277a7/index.m3u8",
+  "第19集": "https://cdn.wlcdn88.com:777/097dec0b/index.m3u8",
+  "第20集": "https://cdn.wlcdn88.com:777/b4d5c158/index.m3u8"
 };
 
 const video = document.getElementById('video');
 const playlist = document.getElementById('playlist');
-const titleEl = document.getElementById('title');
-const statusEl = document.getElementById('status');
-const descriptionEl = document.getElementById('description');
-const prevBtn = document.getElementById('prevBtn');
-const nextBtn = document.getElementById('nextBtn');
+let currentIndex = 0;
 
-let currentBtn = null;
+function loadEpisode(index, btn) {
+  const url = Object.values(episodes)[index];
+  if (!url) return;
 
-// 更新详情区
-function updateDetails(epKey) {
-  titleEl.textContent = `黑白局 - ${epKey}`;
-  statusEl.textContent = episodes[epKey].status;
-  descriptionEl.textContent = episodes[epKey].description;
-}
-
-// 加载集数
-function loadEpisode(url, btn, epKey) {
   if(Hls.isSupported()) {
     const hls = new Hls();
     hls.loadSource(url);
     hls.attachMedia(video);
-    hls.on(Hls.Events.MANIFEST_PARSED, () => {
-      const lastTime = localStorage.getItem(`progress_${epKey}`);
-      if(lastTime) video.currentTime = parseFloat(lastTime);
+    hls.on(Hls.Events.MANIFEST_PARSED, function() {
       video.play();
     });
   } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
     video.src = url;
-    video.addEventListener('loadedmetadata', () => {
-      const lastTime = localStorage.getItem(`progress_${epKey}`);
-      if(lastTime) video.currentTime = parseFloat(lastTime);
-      video.play();
-    });
+    video.addEventListener('loadedmetadata', () => video.play());
   }
 
   document.querySelectorAll('#playlist button').forEach(b => b.classList.remove('active'));
-  btn.classList.add('active');
-  currentBtn = btn;
-
-  updateDetails(epKey);
-  localStorage.setItem('lastEpisode', epKey);
+  if (btn) btn.classList.add('active');
+  currentIndex = index;
 }
 
 // 生成集数按钮
-for(const [ep, data] of Object.entries(episodes)) {
+Object.entries(episodes).forEach(([ep, url], index) => {
   const btn = document.createElement('button');
   btn.textContent = ep;
-  btn.onclick = () => loadEpisode(data.url, btn, ep);
+  btn.onclick = () => loadEpisode(index, btn);
   playlist.appendChild(btn);
-}
-
-// 默认播放上次播放集数或第1集
-let savedEp = localStorage.getItem('lastEpisode') || "第1集";
-let startBtn = Array.from(playlist.children).find(b => b.textContent === savedEp) || playlist.querySelector('button');
-loadEpisode(episodes[startBtn.textContent].url, startBtn, startBtn.textContent);
-
-// 保存播放进度
-video.addEventListener('timeupdate', () => {
-  if(currentBtn) localStorage.setItem(`progress_${currentBtn.textContent}`, video.currentTime);
 });
 
-// 播放结束自动切下一集
-video.addEventListener('ended', () => {
-  if(!currentBtn) return;
-  const next = currentBtn.nextElementSibling;
-  if(next && next.tagName === 'BUTTON') loadEpisode(episodes[next.textContent].url, next, next.textContent);
-});
-
-// 上一集 / 下一集按钮事件
-prevBtn.addEventListener('click', () => {
-  if(!currentBtn) return;
-  const prev = currentBtn.previousElementSibling;
-  if(prev && prev.tagName === 'BUTTON') loadEpisode(episodes[prev.textContent].url, prev, prev.textContent);
-});
-nextBtn.addEventListener('click', () => {
-  if(!currentBtn) return;
-  const next = currentBtn.nextElementSibling;
-  if(next && next.tagName === 'BUTTON') loadEpisode(episodes[next.textContent].url, next, next.textContent);
-});
-
-// 移动端滑动切集
-let touchStartX = 0;
-let touchEndX = 0;
-const swipeThreshold = 50;
-video.addEventListener('touchstart', e => { touchStartX = e.changedTouches[0].screenX; });
-video.addEventListener('touchend', e => {
-  touchEndX = e.changedTouches[0].screenX;
-  const diff = touchEndX - touchStartX;
-  if(Math.abs(diff) > swipeThreshold) {
-    if(diff > 0) prevBtn.click(); // 向右滑
-    else nextBtn.click();         // 向左滑
+// 上一集 / 下一集
+document.getElementById('prev').onclick = () => {
+  if (currentIndex > 0) {
+    const btn = playlist.children[currentIndex - 1];
+    loadEpisode(currentIndex - 1, btn);
   }
-});
+};
+document.getElementById('next').onclick = () => {
+  if (currentIndex < Object.keys(episodes).length - 1) {
+    const btn = playlist.children[currentIndex + 1];
+    loadEpisode(currentIndex + 1, btn);
+  }
+};
+
+// 默认播放第1集
+const firstBtn = playlist.querySelector('button');
+firstBtn.classList.add('active');
+loadEpisode(0, firstBtn);
 </script>
 
 </body>
