--- a/视频txt/index.html
+++ b/视频txt/index.html
@@ -8,24 +8,28 @@
     body { font-family: Arial, sans-serif; background: #2c2c2c; color: #fff; margin: 0; padding: 0; }
     .container { max-width: 1200px; margin: 20px auto; padding: 0 10px; }
     .player { margin-bottom: 20px; position: relative; }
-    video { width: 100%; height: auto; background: black; touch-action: pan-y; }
+    video { width: 100%; height: auto; background: black; touch-action: pan-y; } /* 禁止左右滑动切换 */
 
-    /* 暂停时显示标题 */
-    .overlay {
+    /* 暂停浮层 */
+    #overlay {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      top: 0; left: 0; right: 0; bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(0,0,0,0.5);
       color: #fff;
-      background: rgba(0,0,0,0.6);
-      padding: 15px 25px;
-      border-radius: 8px;
       font-size: 22px;
-      display: none;
+      font-weight: bold;
+      z-index: 10;
+      pointer-events: none; /* 不挡住点击 */
+      opacity: 0;
+      transition: opacity 0.3s ease;
       text-align: center;
+      padding: 20px;
     }
 
-    /* 控制按钮放大 */
+    /* 控制按钮放大 (仅部分浏览器生效) */
     video::-webkit-media-controls-volume-slider,
     video::-webkit-media-controls-mute-button,
     video::-webkit-media-controls-fullscreen-button {
@@ -52,8 +56,8 @@
 
 <div class="container">
   <div class="player">
-    <video id="video" controls playsinline></video>
-    <div id="overlay" class="overlay"></div>
+    <video id="video" controls playsinline webkit-playsinline x5-playsinline></video>
+    <div id="overlay"></div>
   </div>
 
   <div class="nav-buttons">
@@ -61,7 +65,9 @@
     <button id="next">下一集</button>
   </div>
 
-  <div class="playlist" id="playlist"></div>
+  <div class="playlist" id="playlist">
+    <!-- 集数按钮通过 JS 生成 -->
+  </div>
 
   <div class="details">
     <h1 id="title">黑白局 - 電視劇</h1>
@@ -71,7 +77,9 @@
     <p><strong>主演:</strong> <span id="actors">楊旭文, 王硯輝</span></p>
     <p><strong>国家/语言/年代:</strong> <span id="meta">大陸 / 漢語普通話 / 2025</span></p>
     <p><strong>剧情介绍:</strong></p>
-    <p id="description">展鵬（楊旭文 飾）的父親是一名鐵路警察...</p>
+    <p id="description">
+      展鵬（楊旭文 飾）的父親是一名鐵路警察，多年前因公殉職被追評為烈士。展鵬一直希望能夠回到父親曾經工作過的地方任職。然而，當他真正來到下桐並開始工作時，卻發現這裡的情況比他想像的要複雜得多。初見塗洪江（王硯輝 飾），他並不相信這個老警察。塗洪江在處理一起販毒案件時表現得非常可疑，這讓展鵬對他產生了戒備。然而，隨著時間的推移，塗洪江用自己的行動證明了自己的清白。後在攜手辦案的過程中，展鵬逐漸對塗洪江產生敬意，兩人最終聯手將幕後主使緝拿歸案。
+    </p>
   </div>
 </div>
 
@@ -81,17 +89,30 @@ const episodes = {
   "第2集": "https://cdn.wlcdn88.com:777/24a79096/index.m3u8",
   "第3集": "https://cdn.wlcdn88.com:777/876c7a10/index.m3u8",
   "第4集": "https://cdn.wlcdn88.com:777/08e571a4/index.m3u8",
+  "第5集": "https://cdn.wlcdn88.com:777/c157d41b/index.m3u8",
+  "第6集": "https://cdn.wlcdn88.com:777/8165d81c/index.m3u8",
+  "第7集": "https://cdn.wlcdn88.com:777/be10cef2/index.m3u8",
+  "第8集": "https://cdn.wlcdn88.com:777/f38e43bd/index.m3u8",
+  "第9集": "https://cdn.wlcdn88.com:777/81f6e26a/index.m3u8",
+  "第10集": "https://cdn.wlcdn88.com:777/0d3f5aa4/index.m3u8",
+  "第11集": "https://cdn.wlcdn88.com:777/d2d262ce/index.m3u8",
+  "第12集": "https://cdn.wlcdn88.com:777/8620bb8d/index.m3u8",
+  "第13集": "https://cdn.wlcdn88.com:777/c9221c9a/index.m3u8",
+  "第14集": "https://cdn.wlcdn88.com:777/81476e87/index.m3u8",
+  "第15集": "https://cdn.wlcdn88.com:777/5424d5c4/index.m3u8",
+  "第16集": "https://cdn.wlcdn88.com:777/34f4fe36/index.m3u8",
+  "第17集": "https://cdn.wlcdn88.com:777/a512f599/index.m3u8",
+  "第18集": "https://cdn.wlcdn88.com:777/d48277a7/index.m3u8",
+  "第19集": "https://cdn.wlcdn88.com:777/097dec0b/index.m3u8",
   "第20集": "https://cdn.wlcdn88.com:777/b4d5c158/index.m3u8"
 };
 
 const video = document.getElementById('video');
 const playlist = document.getElementById('playlist');
 const overlay = document.getElementById('overlay');
-const titleEl = document.getElementById('title');
 let currentIndex = 0;
 
 function loadEpisode(index, btn) {
-  const keys = Object.keys(episodes);
   const url = Object.values(episodes)[index];
   if (!url) return;
 
@@ -99,7 +120,9 @@ function loadEpisode(index, btn) {
     const hls = new Hls();
     hls.loadSource(url);
     hls.attachMedia(video);
-    hls.on(Hls.Events.MANIFEST_PARSED, () => video.play());
+    hls.on(Hls.Events.MANIFEST_PARSED, function() {
+      video.play();
+    });
   } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
     video.src = url;
     video.addEventListener('loadedmetadata', () => video.play());
@@ -107,10 +130,14 @@ function loadEpisode(index, btn) {
 
   document.querySelectorAll('#playlist button').forEach(b => b.classList.remove('active'));
   if (btn) btn.classList.add('active');
-
   currentIndex = index;
-  titleEl.textContent = "黑白局 - " + keys[index];
-  overlay.textContent = "黑白局 - " + keys[index];
+}
+
+// 更新浮层显示
+function updateOverlay() {
+  const title = document.getElementById('title').textContent;
+  const epName = Object.keys(episodes)[currentIndex];
+  overlay.textContent = title + " - " + epName;
 }
 
 // 生成集数按钮
@@ -135,19 +162,14 @@ document.getElementById('next').onclick = () => {
   }
 };
 
-// 暂停/播放显示标题
-video.addEventListener('pause', () => { overlay.style.display = 'block'; });
-video.addEventListener('play', () => { overlay.style.display = 'none'; });
+// 视频事件绑定
+video.addEventListener('pause', () => {
+  updateOverlay();
+  overlay.style.opacity = 1; // 显示
+});
 
-// 手机上下滑动切换集数
-let touchStartY = 0;
-video.addEventListener('touchstart', e => { touchStartY = e.changedTouches[0].screenY; });
-video.addEventListener('touchend', e => {
-  let diffY = e.changedTouches[0].screenY - touchStartY;
-  if (Math.abs(diffY) > 50) {
-    if (diffY > 0) document.getElementById('prev').click(); // 下滑 → 上一集
-    else document.getElementById('next').click();           // 上滑 → 下一集
-  }
+video.addEventListener('play', () => {
+  overlay.style.opacity = 0; // 隐藏
 });
 
 // 默认播放第1集
