--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     document.title = folderName; // 同时修改网页标签标题
   </script>
   <h2>频道目录首页</h2>
+  <p><a href="./video/index.html">video</a></p> 
   <p><a href="./小说频道总目录/index.html">小说频道总目录</a></p> 
   <p><a href="./少女阁/index.html">少女阁</a></p> 
   <p><a href="./御女宫网页自跳转/index.html">御女宫网页自跳转</a></p> 
@@ -28,7 +29,6 @@
   <p><a href="./水果派AV频道总目录/index.html">水果派AV频道总目录</a></p> 
   <p><a href="./漫画频道总目录/index.html">漫画频道总目录</a></p> 
   <p><a href="./福利姬频道总目录/index.html">福利姬频道总目录</a></p> 
-  <p><a href="./视频txt/index.html">视频txt</a></p> 
   <p><a href="./韩国少女频道/index.html">韩国少女频道</a></p> 
 </body>
 </html>
